--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.8"
 discord = "^1.7.3"
 python-dotenv = "^0.19.2"
+replit = "^3.2.4"
 
 [tool.poetry.dev-dependencies]
 
