--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python-dotenv = "^0.19.2"
 replit = "^3.2.4"
 "discord.py" = {git = "https://github.com/Rapptz/discord.py"}
 discord = "^1.7.3"
+pytest = "^7.1.2"
+pytest-asyncio = "^0.19.0"
 
 [tool.poetry.dev-dependencies]
 
