--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ discord = "^1.7.3"
 pytest = "^7.1.2"
 pytest-asyncio = "^0.19.0"
 tinydb = "^4.7.0"
+posthog = "^2.1.0"
 
 [tool.poetry.dev-dependencies]
 
