--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pytest = "^7.1.2"
 pytest-asyncio = "^0.19.0"
 tinydb = "^4.7.0"
 posthog = "^2.1.0"
+quart = "^0.18.0"
 
 [tool.poetry.dev-dependencies]
 
