--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ authors = ["Ian Vanagas <ianvanagas@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 python-dotenv = "^0.19.2"
-"discord.py" = {git = "https://github.com/Rapptz/discord.py"}
 pytest = "^7.1.2"
 pytest-asyncio = "^0.19.0"
 tinydb = "^4.7.0"
 posthog = "^2.1.0"
 quart = "^0.18.0"
+discord = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 
